add result registration

--- a/templates/index.html.j2
+++ b/templates/index.html.j2
@@ -9,6 +9,9 @@
 <body>
   <h1>Hello World!!!</h1>
   <h2>{{ text | upper }}</h2>
+  <pre><code>
+    {{ result.stdout }}
+  </code></pre>
   <small>Now is {{ansible_date_time.date}} {{ansible_date_time.weekday}}</small>
 </body>
 </html>
